--- a/software/caTissue/build.xml
+++ b/software/caTissue/build.xml
@@ -391,10 +391,11 @@
 		<ivy:resolve refresh="true" conf="app_lib" />
 		<ivy:retrieve pattern="${lib.dir}/[conf]/[artifact]-[revision].[ext]" conf="app_lib" />
 	</target>
-	<target name="integrate_bulk_operation" description="Start of Integrating the Bulk Operation Module">
+
+    <target name="integrate_bulk_operation" description="Start of Integrating the Bulk Operation Module">
 		<echo>Integrating the Bulk Operation Module</echo>
 		<antcall target="unzip_bulkoperation_installable" />
-		<ant dir="${base.dir}/bulkoperation" inheritAll="false" antfile="bulkoperationintegration.xml" target="bulkoperation_integrate_app">
+		<ant dir="${basedir}/bulkoperation" inheritAll="false" antfile="bulkoperationintegration.xml" target="bulkoperation_integrate_app">
 			<property name="deploy.temp.dir" value="${temp.dir}/bulkoperation" />
 			<property name="temp.classes.dir" value="${classes.dir}" />
 			<property name="bulkoperation.base.dir" value="${basedir}/bulkoperation" />
@@ -464,7 +465,7 @@
 		</antcall>
 
 		<war destfile="${target.dir}/dist/catissuecore.war" webxml="${catissue.web}/WEB-INF/web.xml" duplicate="preserve" manifest="${temp.dir}/MANIFEST.MF">
-			<fileset dir="${temp.dir}/bulkoperation/src/web">
+			<fileset dir="${temp.dir}/bulkoperation">
 				<include name="**/pages/**" />
 				<include name="**/jss/**" />
 				<include name="**/css/**" />
