Description : Add attribute collection date and age at collection in Specimen Collection Group Page. Code Review By: Srikanth
SVN-Revision: 27838

--- a/software/caTissue/modules/core/src/main/java/ApplicationResources.properties
+++ b/software/caTissue/modules/core/src/main/java/ApplicationResources.properties
@@ -1174,6 +1174,9 @@ specimenCollectionGroup.clinicalStatus=Clinical Status
 specimenCollectionGroup.medicalRecordNumber=Medical Record Number
 specimenCollectionGroup.surgicalPathologyNumber=Surgical Pathology Number
 specimenCollectionGroup.collectionStatus=Collection Status
+specimenCollectionGroup.collectionDate=Collection Date
+specimenCollectionGroup.collectionTime=Collection Time
+specimenCollectionGroup.ageAtCollection=Age At Collection
 specimenCollectionGroup.participantNameWitProtocolId=Participant Name (Protocol ID)
 specimenCollectionGroup.studyCalenderEventPointAndPPID=Either the Participant is not registered to the Collection Protocol, or the Study Calendar Event Point is not a valid event in the Collection Protocol.
 specimen.details.label Specimen Details
