--- a/software/caTissue/modules/core/src/main/java/ApplicationResources.properties
+++ b/software/caTissue/modules/core/src/main/java/ApplicationResources.properties
@@ -2443,6 +2443,9 @@ print.issue = Error while printing.
 titli.error = Error in Keyword Search, this method should be overridden in application specific bizlogics.
 #---HomeLogo.jsp---
 cabig.url = http://cabig.nci.nih.gov/
+institution.logo.filename=@INSTITUTION_LOGO_FILENAME@
+institution.logo.alt=@INSTITUTION_LOGO_ALT@
+institution.logo.href=@INSTITUTION_LOGO_HREF@
 
 #For IdP
 errors.noRole=User doesn't have any role for application, so can't login into application.Please click Report Problems to inform your System Administrator.
