Description:Change in Specimen Collection Group AGE_AT_COLLECTION as Integer. and Update AGE_AT_COLLECTION whenever Participant Date of Birth Updated. Code Review By:nitesh,sachin
SVN-Revision: 27872

--- a/software/caTissue/modules/core/src/main/java/ApplicationResources.properties
+++ b/software/caTissue/modules/core/src/main/java/ApplicationResources.properties
@@ -625,6 +625,7 @@ spp.error.name.missing=Please enter the SPP name
 spp.error.spcl.char=Please enter valid SPP name
 spp.error.file=Please upload the XML file
 spp.error.valid.file=Only XML file can be uploaded
+error.update.ageAtCollection=Error While Updating Age At Collection of Specimen Collection Group
 # Bugid 19485. This property is used by IDP.
 errors.LoginIDNotAvailable=A user with same login name already exists.
 
@@ -1579,7 +1580,6 @@ search.searchResults=Search Result
 pageOfUserAdmin.searchResultTitle=User
 pageOfInstitution.searchResultTitle=Institution
 pageOfDepartment.searchResultTitle=Department
-pageOfSPP.searchResultTitle=Specimen Processing Procedure
 pageOfCancerResearchGroup.searchResultTitle=Cancer
 pageOfSite.searchResultTitle=Site
 pageOfStorageType.searchResultTitle=Storage Type
