* Task/Bug Id: 21674 * Code Reviewed By: <Reviewed By> On : <Review date> * Technical Details:  <Technical details for the changes made if any> * Unit tested:   <Names of the test cases> * Developer Notes: <Free form comments, typically will involve names of the methods changed etc> * Current Build++ Counts for this file : <B++ counts before the file is checked-in> * PMD - X     Checkstyle - X     Findbugs - X     CPD – X
SVN-Revision: 27874

--- a/software/caTissue/modules/core/src/main/java/ApplicationResources.properties
+++ b/software/caTissue/modules/core/src/main/java/ApplicationResources.properties
@@ -626,6 +626,7 @@ spp.error.spcl.char=Please enter valid SPP name
 spp.error.file=Please upload the XML file
 spp.error.valid.file=Only XML file can be uploaded
 error.update.ageAtCollection=Error While Updating Age At Collection of Specimen Collection Group
+error.update.spp Error while inserting SPP XML in database, Please contact Administrator
 # Bugid 19485. This property is used by IDP.
 errors.LoginIDNotAvailable=A user with same login name already exists.
 
