* Task/Bug Id: <Development task name or bug id> * Code Reviewed By: <Reviewed By> On : <Review date> * Technical Details:  excluded the mysql-connector-java-5.1.5.jar getting copied from the catissue_cacore.war to catissue.war which is causing the failure while first login attempt on server startup. * Unit tested:   <Names of the test cases> * Developer Notes: <Free form comments, typically will involve names of the methods changed etc> * Current Build++ Counts for this file : <B++ counts before the file is checked-in> * PMD - X     Checkstyle - X     Findbugs - X     CPD – X
SVN-Revision: 27900

--- a/software/caTissue/build.xml
+++ b/software/caTissue/build.xml
@@ -622,6 +622,7 @@
 				<exclude name="**/WEB-INF/web.xml" />
 				<exclude name="**/WEB-INF/classes/edu/wustl/catissuecore/domain/**" />
 				<exclude name="**/WEB-INF/lib/csmapi.jar" />
+				<exclude name="**/WEB-INF/lib/mysql-connector-java-5.1.5.jar" />
 				<exclude name="**/WEB-INF/lib/dom4*.jar" />
 				<exclude name="**/WEB-INF/lib/jta.jar" />
 				<exclude name="**/WEB-INF/lib/cglib*.jar" />
