--- a/software/caTissue/modules/caTissueStaticDataService/build.properties
+++ b/software/caTissue/modules/caTissueStaticDataService/build.properties
@@ -1,8 +1,26 @@
-applicationHostName=localhost
+### Host where caTissue application has been deployed
+applicationHostName=ca.gov
+
+### Port of access for caTissue application
 applicationHostPort=8080
+
+### Application name (Context path)
+applicationName=catissuecore
+
+### caTissue http protocol security
 useHttpsUrl=false
+
+### Whether to use gridIdentity to identify the user to perform operations for
 useGridIdentityLogin=true
+
+### Static user to perform operations for and used to make the first connection to caCore
 staticLoginUser=admin@admin.com
-staticLoginPass=Login123
+
+### Static user password
+staticLoginPass=Aa_111111
+
+### Whether to use static user details to perform the operation for, this is opposite with useGridIdentityLogin
 useStaticLogin=false
+
+### Use local caCore API to perform operations
 useLocalApiFlag=false
