--- a/software/caTissue/modules/caTissueStaticDataService/build.properties
+++ b/software/caTissue/modules/caTissueStaticDataService/build.properties
@@ -24,3 +24,5 @@ useStaticLogin=false
 
 ### Use local caCore API to perform operations
 useLocalApiFlag=false
+
+### Example caTissue available at: http://ca.gov:8080/catissuecore
