--- a/software/caTissue/modules/caTissueStaticDataService/build.properties
+++ b/software/caTissue/modules/caTissueStaticDataService/build.properties
@@ -25,4 +25,6 @@ useStaticLogin=false
 ### Use local caCore API to perform operations
 useLocalApiFlag=false
 
-### Example caTissue available at: http://ca.gov:8080/catissuecore
+### Example:
+### Based on where caTissue is deployed you define first 4 properties,
+### In this case caTissue is expected to be available at: http://ca.gov:8080/catissuecore
