--- a/software/caTissue/modules/caTissueStaticDataService/build.properties
+++ b/software/caTissue/modules/caTissueStaticDataService/build.properties
@@ -10,7 +10,7 @@ applicationName=catissuecore
 ### caTissue http protocol security
 useHttpsUrl=false
 
-### Whether to use gridIdentity to identify the user to perform operations for
+### Whether to use gridIdentity for identifying the user to perform operations for
 useGridIdentityLogin=true
 
 ### Static user to perform operations for and used to make the first connection to caCore
