--- a/software/caTissue/modules/caTissueStaticDataService/build.properties
+++ b/software/caTissue/modules/caTissueStaticDataService/build.properties
@@ -26,5 +26,5 @@ useStaticLogin=false
 useLocalApiFlag=false
 
 ### Example:
-### Based on where caTissue is deployed you define first 4 properties,
+### You define first 4 properties based on where caTissue is deployed.
 ### In this case caTissue is expected to be available at: http://ca.gov:8080/catissuecore
