--- a/software/caTissue/modules/core/.classpath
+++ b/software/caTissue/modules/core/.classpath
@@ -217,7 +217,7 @@
 	<classpathentry kind="lib" path="../../../target/lib/caTissue_lib/web_inf_lib/SecurityManager-1.1.7.3-SNAPSHOT.jar"/>
 	<classpathentry kind="lib" path="../../../target/lib/caTissue_lib/web_inf_lib/SimpleQuery-1.2-SNAPSHOT.jar"/>
 	<classpathentry kind="lib" path="../../../target/lib/caTissue_lib/web_inf_lib/titli-washu-1.0-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="../../../target/lib/caTissue_lib/web_inf_lib/washu-commons-1.3-SNAPSHOT.jar" sourcepath="/catissue-CommonPackage"/>
+	<classpathentry kind="lib" path="../../../target/lib/caTissue_lib/web_inf_lib/washu-commons-1.3-SNAPSHOT.jar" sourcepath="/catissue-WashU-Commons"/>
 	<classpathentry kind="lib" path="../../../target/lib/caTissue_lib/web_inf_lib/xalan-2.6.0.jar"/>
 	<classpathentry kind="lib" path="../../../target/lib/caTissue_lib/web_inf_lib/struts.jar"/>
 	<classpathentry kind="lib" path="../../../target/lib/caTissue_lib/compile_lib/query-1.0-SNAPSHOT.jar"/>
