* Task/Bug Id: Bug 20640 - System should show customized error when CTRP service is down * Code Reviewed By: <Reviewed By> On : <Review date> * Technical Details:  <Technical details for the changes made if any> * Unit tested:   <Names of the test cases> * Developer Notes: <Free form comments, typically will involve names of the methods changed etc> * Current Build++ Counts for this file : <B++ counts before the file is checked-in> * PMD - X     Checkstyle - X     Findbugs - X     CPD – X
SVN-Revision: 27955

--- a/software/caTissue/modules/core/src/main/java/ApplicationResources.properties
+++ b/software/caTissue/modules/core/src/main/java/ApplicationResources.properties
@@ -2564,6 +2564,8 @@ ctrp.protocol.select=Select NCI Enterprise Collection Protocol
 ctrp.protocol.check.coppa.message=Please enter any part of title to look up a collection protocol in NCI Enterprise (Optional).
 ctrp.protocol.popup.title=Official Title
 
+ctrp.error.down=CTRP services are inaccessible.
+
 
 # GSID
 errors.gsid=Exception Retrieving GSID
