* Task/Bug Id: <Development task name or bug id> * Code Reviewed By: <Reviewed By> On : <Review date> * Technical Details:  checking-in test cases for ordering API, on the behalf of sagar * Unit tested:   <Names of the test cases> * Developer Notes: <Free form comments, typically will involve names of the methods changed etc> * Current Build++ Counts for this file : <B++ counts before the file is checked-in> * PMD - X     Checkstyle - X     Findbugs - X     CPD – X
SVN-Revision: 27958

--- a/software/caTissue/modules/tests/unit/caTissueSuite_Client/build.xml
+++ b/software/caTissue/modules/tests/unit/caTissueSuite_Client/build.xml
@@ -53,4 +53,31 @@
 			<report todir="${report.dir}/Html_reports" />
 		</junitreport>
 	</target>
+	<target name="runOrderingJunitTestCases" depends="compile_junit_TestCases">
+		<mkdir dir="${report.dir}" />
+		<mkdir dir="${report.dir}/Html_reports" />
+
+		<junit printsummary="yes" fork="yes" haltonfailure="no">
+			<jvmarg value="-Dsun.lang.ClassLoader.allowArraySyntax=true" />
+			<formatter type="xml" />
+			<classpath>
+				<fileset dir="lib">
+					<include name="**/*.jar" />
+				</fileset>
+				<pathelement path="${conf.dir}" />
+				<pathelement path="${target.dir}" />
+			</classpath>
+			<batchtest todir="${report.dir}">
+				<fileset dir="${target.dir}" includes="**/CaTissueOrderingTestSuite.class" />
+			</batchtest>
+		</junit>
+	</target>
+	<target name="runOrderingNightlyBuild" depends="runOrderingJunitTestCases">
+		<junitreport todir="${report.dir}">
+			<fileset dir="${report.dir}">
+				<include name="TEST-*.xml" />
+			</fileset>
+			<report todir="${report.dir}/Html_reports" />
+		</junitreport>
+	</target>
 </project>
