--- a/software/caTissue/modules/core/src/main/java/ApplicationResources.properties
+++ b/software/caTissue/modules/core/src/main/java/ApplicationResources.properties
@@ -1305,6 +1305,8 @@ eventparameters.dateofevent=Date
 eventparameters.timeinhours=Hr.
 eventparameters.timeinminutes=Min.
 eventparameters.time Time
+eventparameters.reasonfordeviation=Reason For Deviation
+
 #-- eventparameters Add/Edit Keys End --
 eventparameters.event=Event
 eventparameter=Event Parameter
