* Task/Bug Id: Bug 21873 - Grid Grouper Integration broken after CAS removal * Code Reviewed By: <Reviewed By> On : <Review date> * Technical Details:  <Technical details for the changes made if any> * Unit tested:   <Names of the test cases> * Developer Notes: <Free form comments, typically will involve names of the methods changed etc> * Current Build++ Counts for this file : <B++ counts before the file is checked-in> * PMD - X     Checkstyle - X     Findbugs - X     CPD – X
SVN-Revision: 27982

--- a/software/caTissue/modules/core/.classpath
+++ b/software/caTissue/modules/core/.classpath
@@ -212,7 +212,7 @@
 	<classpathentry kind="lib" path="../../../target/lib/caTissue_lib/web_inf_lib/XmlSchema.jar"/>
 	<classpathentry kind="lib" path="../../../target/lib/caTissue_lib/web_inf_lib/xmlsec.jar"/>
 	<classpathentry kind="lib" path="../../../target/lib/caTissue_lib/web_inf_lib/xsdlib.jar"/>
-	<classpathentry kind="lib" path="../../../target/lib/caTissue_lib/web_inf_lib/IDPAuthenticationManager1.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="../../../target/lib/caTissue_lib/web_inf_lib/IDPAuthenticationManager1.0-SNAPSHOT.jar" sourcepath="/catissue-Idp-Auth-Manager"/>
 	<classpathentry kind="lib" path="../../../target/lib/caTissue_lib/web_inf_lib/limpopo-1.0.7.2.jar"/>
 	<classpathentry kind="lib" path="../../../target/lib/caTissue_lib/web_inf_lib/SecurityManager-1.1.7.3-SNAPSHOT.jar"/>
 	<classpathentry kind="lib" path="../../../target/lib/caTissue_lib/web_inf_lib/SimpleQuery-1.2-SNAPSHOT.jar"/>
