Bug 21888 - Event Details Page of New CP Creation Not Clear Description:When creating (or editing) a CP, the Event Details page lists Specimen Processing Procedures which is not entirely accurate. For clarity, this should be re-worded as "Specimen Collection Procedure"
Code Review By: pathik

SVN-Revision: 27992

--- a/software/caTissue/modules/core/src/main/java/ApplicationResources.properties
+++ b/software/caTissue/modules/core/src/main/java/ApplicationResources.properties
@@ -1111,6 +1111,7 @@ collectionprotocol.studycalendartitle=Study Calendar Event Point
 #-- Deepti for futureSCG_16
 collectionprotocol.collectionpointlabel=Collection Point Label
 collectionprotocol.studycalendarcomment=Days
+collectionprotocol.specimen.collection.procedure=Specimen Collection Procedure
 collectionprotocol.specimenreq=Specimen Requirements
 collectionprotocol.specimennumber=#
 collectionprotocol.specimenclass=Class
