Fixed logging issues in the grid service. Wasn't able to change logging levels at all.
SVN-Revision: 28010

--- a/software/caTissue/modules/caTissueStaticDataService/build.properties
+++ b/software/caTissue/modules/caTissueStaticDataService/build.properties
@@ -1,5 +1,5 @@
 ### Host where caTissue application has been deployed
-applicationHostName=ca.gov
+applicationHostName=localhost
 
 ### Port of access for caTissue application
 applicationHostPort=8080
