--- a/software/caTissue/modules/DECodeGen/build.xml
+++ b/software/caTissue/modules/DECodeGen/build.xml
@@ -4,7 +4,7 @@
     <property name="src.dir" value="${basedir}/src/main/java"/>
     <property name="lib.dir" value="${basedir}/ext/dependencies"/>
     <property name="dist.dir" value="${basedir}/dist"/>
-    <property name="xsdFile" value="${basedir}/src/test/resources/withIdentifier/clinical_annotation.xsd"/>
+    <property name="xsdFile" value="${basedir}/src/test/resources/withIdentifier/gov.nih.nci.dynext.clinical_annotation.xsd"/>
     <property name="xmiFolder" value="${basedir}/src/test/resources/xmi/"/>
     <property name="outputXMLFile" value="${basedir}/src/test/resources/xmi/xmlResult.xml"/>
 
