--- a/software/caTissue/build.xml
+++ b/software/caTissue/build.xml
@@ -777,6 +777,9 @@
 			<fileset file="${resources.dir}/csv/SpecimenEvents.csv" />
 		</copy>
 		<copy todir="${zip.dir}/modules/caTissue/resources/csv" overwrite="true">
+					<fileset file="${resources.dir}/csv/staticModelPV.csv" />
+				</copy>
+		<copy todir="${zip.dir}/modules/caTissue/resources/csv" overwrite="true">
 			<fileset file="${resources.dir}/csv/SpecimenEvents_PVs.csv" />
 		</copy>
 		<copy todir="${zip.dir}/modules/caTissue/resources/xml" overwrite="true">
