* Task/Bug Id: Chnages to include the washu-commons jar in API zip * Code Reviewed By: <Reviewed By> On : <Review date> * Technical Details:  <Technical details for the changes made if any> * Unit tested:   <Names of the test cases> * Developer Notes: <Free form comments, typically will involve names of the methods changed etc> * Current Build++ Counts for this file : <B++ counts before the file is checked-in> * PMD - X     Checkstyle - X     Findbugs - X     CPD – X
SVN-Revision: 28262

--- a/software/caTissue/build.xml
+++ b/software/caTissue/build.xml
@@ -950,7 +950,7 @@
 				<include name="DynamicExtensions*.jar" />
 				<include name="ParticipantManager.jar" />
 				<include name="SimpleQuery*.jar" />
-				<include name="washu-commons-1.1.8.jar" />
+				<include name="washu-commons*.jar" />
 			</fileset>
 			<fileset dir="${caTissueSuite_Client_lib.dir}">
 				<include name="catissuecore.jar" />
