changes for supporting new BO & Participant manager
SVN-Revision: 28279

--- a/WEB-INF/src/participantManager.properties
+++ b/WEB-INF/src/participantManager.properties
@@ -10,3 +10,4 @@ SendingApplication=ADT_CATISSUE_1
 SendingFacility=WUSM_CATISSUE
 EventTypeCode=A08
 FacilityID=6C
+grid.cs.columnname=Collection Protocol Name
