--- a/WEB-INF/src/BulkOperations.properties
+++ b/WEB-INF/src/BulkOperations.properties
@@ -5,3 +5,4 @@ tilesAppHeader=<put name="applicationheader" value="/pages/ApplicationHeader.jsp
 tilesMainMenu=<put name="mainmenu" value="/pages/mainMenu/Home.jsp" />
 tilesContent=<put name="content" value="/pages/content/home/Home.jsp" />
 tilesAppFooter=<put name="applicationfooter" value="/pages/ApplicationFooter.jsp" />
+dhtmlPath=dhtmlx_suite
