changes for supporting new BO & Participant manager
SVN-Revision: 28281

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -2537,3 +2537,12 @@ empi.adminuser.notexists.body.start=eMPI admin user specified in the property fi
 empi.adminuser.notexists.comments=For performing eMPI id generation related activities,specified eMPI admin user must exists in the application.So please add specified eMPI admin user.
 empi.adminuser.notexists.email.failure=eMPI admin user not exists email not sent to the admin user.
 
+#Bulk EMPI operations
+bulk.empi.matching=Bulk EMPI Operations
+bulk.empi.select.file=Select CSV file
+bulk.empi.start.job=Start Job
+bulk.empi.threshhold=Threshold
+bulk.empi.job.type=Job Type
+bulk.empi.dashboard=Bulk Participant Matching Dashboard
+bulk.empi.matching.invalid.file=File is not in expected format. Please upload file with only one column named {0}.
+bulk.empi.loading.invalid.file=File is not in expected format. Please upload file with two columns named {0}.
